src/css/fluid-covid-map-viz.css
/* ... */
/******** The panel with the query label, the query input **********/
.fl-mapviz-query-label {
    display: none;
}

/* Contains both the search label and the filter control div */
.fl-mapviz-query-wrapper {
    position: absolute;
    width: 100%;
    z-index: 999;
}

.fl-mapviz-query-wrapper > svg {
    height: 1.5rem;
    padding-left: 1rem;
    padding-top: 0.7rem;
    position: absolute;
    width: 1.5rem;
    z-index: 1;
}

.fl-mapviz-query-holder {
    margin: 0.5rem;
}

.fl-mapviz-query-holder input {
    background-color: white;
    border: 1px solid black;
    border-radius: 1.5rem;
    height: 2rem;
    padding-left: 2.5rem;
    width: 100%;
}

/** This markup is injected by the autocomplete widget **/
.fl-mapviz-query-holder ul {
    margin-block-end: 0;
    margin-block-start: 0;
}

/** The reset icon in the query box **/
.fl-mapviz-query-reset-holder {
    position: relative;
}

.fl-mapviz-query-reset {
    height: 1rem;
    position: absolute;
    right: 0.6rem;
    top: 0.5rem;
    z-index: 900;
}

.fl-mapviz-query-reset svg {
    height: 1rem;
    width: 1rem;
    z-index: 1;
}

/******** The accessibility filters panel **********/
.fl-mapviz-filter-count-holder-on-desktop {
    display: none;
}

.fl-mapviz-filter-panel {
    max-width: 100%;
}

.fl-mapviz-filter-panel-title {
    display: flex;
    flex-direction: row;
}

.fl-mapviz-filter-panel h2 {
    margin: 1rem 0;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
    text-transform: uppercase;
}

/* All a11y feature list */
.fl-mapviz-filters {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin: 0;
    overflow-y: scroll;
    padding: 0;
}

/* Individual a11y feature */
.fl-mapviz-filter {
    align-items: center;
    display: flex;
    flex-direction: row;
    height: 6rem;
    justify-content: center;
}

/* The icon for each a11y feature */
.fl-mapviz-filter-icon {
    height: 3rem;
    padding: 0.3rem;
    width: 3rem;
}

/* The tooltip icon for each a11y feature */
.tooltip-svg-internal-char-class {
    fill: var(--tooltip-char-color, black);
}

.tooltip-svg-internal-bg-class {
    fill: var(--tooltip-bg-color, transparent);
    stroke: var(--tooltip-bg-stroke-color, black);
}

.fl-mapviz-filter-tooltip-icon {
    height: 1.3rem;
    margin-bottom: 3.125rem;
    width: 1.3rem;
}

.fl-mapviz-filter-tooltip-icon:active {
    --tooltip-char-color: white;
    --tooltip-bg-color: black;
}

.fl-mapviz-filter-tooltip-icon svg {
    height: 1.25rem;
    width: 1.25rem;
}

/* The title of each a11y feature */
.fl-mapviz-filter-title {
    display: inline-block;
    font-stretch: condensed;
    font-style: normal;
    text-transform: uppercase;
    width: 15rem;
}

/* The checkbox for each a11y feature */

.fl-checkbox-holder {
    margin-right: 0.5rem;
}

.fl-checkbox-holder > span {
    border: 2px solid black;
    box-sizing: border-box;
    display: inline-block;
    height: 2rem;
    position: relative;
    vertical-align: middle;
    width: 2rem;
}

.fl-checkbox-holder > span:hover,
.fl-checkbox-holder > input:focus + span {
    outline: 1px solid #000;
    outline-offset: 2px;
}

.fl-checkbox-holder > input {
    -webkit-appearance: none;
    appearance: none;
}

.fl-checkbox-holder svg {
    /** The checkbox is not quite correctly sized and doesn't fill its box **/
    height: 2rem;
    left: -0.125rem;

    /** On Firefox, the SVG will take up an unpredictable amount of extra space in the layout **/
    position: absolute;
    top: -0.125rem;
    width: 2rem;
}

.fl-checkbox-holder input:not(:checked) + span .fl-checkbox-selected {
    display: none;
}

/* The parent container of filter buttons */
.fl-mapviz-filter-buttons {
    display: flex;
    justify-content: space-evenly;
}

/* "apply filters" and "reset filters" buttons */
.fl-mapviz-apply-filters,
.fl-mapviz-reset-filters {
    align-items: center;
    background-color: transparent;
    border-style: none;
    display: inline-flex;
    height: 3rem;
    width: 11rem;
}

.fl-mapviz-apply-filters svg,
.fl-mapviz-reset-filters svg {
    fill: none;
    height: 1rem;
    width: 1rem;
}

.fl-mapviz-apply-filters:hover .fl-mapviz-icon-shadow,
.fl-mapviz-apply-filters:focus .fl-mapviz-icon-shadow,
.fl-mapviz-reset-filters:hover .fl-mapviz-icon-shadow,
.fl-mapviz-reset-filters:focus .fl-mapviz-icon-shadow {
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25) inset, 0 0 0 1px black;
}

/******** Expand/collapse button for the city list panel, the search results panel and the a11y filter panel ********/
.fl-mapviz-expand-collapse-button-wrapper {
    background-color: #c4c4c4;
    border-radius: 1rem 1rem 0 0;
    display: flex;
    justify-content: center;
}

.fl-mapviz-expand-collapse-button-holder {
    align-self: center;
    background: none;
    border: none;
    margin: 0.5rem 0 0.5rem 0;
    width: 4rem;
}

.fl-mapviz-expand-collapse-button-holder svg {
    height: 0.7rem;
    width: 1.4rem;
}

.expand-collapse-svg-internal-class {
    fill: var(--expand-button-color, none);
    stroke: var(--expand-button-stroke-color, black);
    stroke-width: var(--expand-button-stroke-width, 2px);
}

.fl-mapviz-expand-collapse-button-holder:hover,
.fl-mapviz-expand-collapse-button-holder:focus {
    --expand-button-color: black;
    --expand-button-stroke-width: 0;
}

/* When the city list/search results panel is collapsed, hide all relevant elements */
.fl-mapviz-expand-collapse-button-holder[aria-expanded="true"] > .fl-mapviz-expand-button,
.fl-mapviz-expand-collapse-button-holder[aria-expanded="false"] > .fl-mapviz-collapse-button,
.fl-mapviz-expand-collapse-button-holder[aria-expanded="false"] ~ .fl-mapviz-search-results-list {
    display: none;
}

/******** The city list panel ********/
.fl-mapviz-city-list-title {
    align-items: center;
    box-shadow: inset 0 -7px 2px -4px rgba(0, 0, 0, 0.25);
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0.5rem 2rem;
}
/* ... */

